fixed a few bugs; samo projects got updated; cosmetic changes;

--- a/_posts/2016-06-06-cppual.md
+++ b/_posts/2016-06-06-cppual.md
@@ -6,12 +6,12 @@ tagline: Quantum Leap
 tags: Programming C++ CMake Vulkan OpenCL
 thumb: cppual_thumb.jpg
 category: Project
+role: Idea, Code
 status: wip
 ---
 ![Logo]({{ site.baseurl }}img/cppual.png "C++ Unified Abstraction Library")
 
->Latest Supported Language Standard: C++14  
->Future Language Standards: C++17 or D Language
+>Latest Supported Language Standard: C++14
 
 ***The source code is private for now***
 
@@ -23,7 +23,7 @@ status: wip
 
 **So the real question is:** Why would you want to have all these libraries when OpenCL is pushing hard and you can program it pretty much like a regular CPU? It's just a matter of time until OpenCL evolves and turns into an all-in-one standard.
 
-**March 6th 2015:** Well,... it evolved into Vulkan (GLNext), however OpenCL still remains as a new revision was released (2.1). Both are using a common IL - SPIR-V.
+**March 6th 2015:** Well,... it evolved into Vulkan (GLNext, based on Mantle), however OpenCL still remains as a new revision was released (2.1). Both are using a common IL - SPIR-V.
 
 
 ## Concept & Interface Goals
@@ -147,4 +147,3 @@ status: wip
 * drop sndfile
 * transparent filesystem management (using protocols)
 * prepare the library for universal memory (memristors)
-* implement everything in D Language
