--- a/_posts/2016-12-23-fadegal.md
+++ b/_posts/2016-12-23-fadegal.md
@@ -7,12 +7,12 @@ tags: Development JavaScript CSS WordPress Plugin JQuery
 thumb: fadegal_thumb.jpg
 category: Project
 client: WP Solutions
-client_url: http://portfoliowp.hightechbgweb.com/
+client_url: http://wp.hightechbgweb.com/
 role: Code, WordPress Implementation
 status: wip
 ---
-<a href="https://bitbucket.org/softtech-bg/fadegal/" class="icon fa-bitbucket">
-Source Code (Requires Authorization)</a>
+<a href="https://github.com/insidious-src/wordpress-fadegal" class="icon fa-github">
+Source Code</a>
 
 **Example Usage**
 
@@ -51,7 +51,7 @@ $(function()
 </script>
 ~~~
 
-## Features/Do To List
+## Features/To Do List
 - Adapt to any configuration [~70%]
 - Cyclic Navigation Binding [Done]
 - Unified Animations [~80%]
