baseurl replace with url_dir

--- a/_posts/2008-10-04-pes-2009-demo-patch.md
+++ b/_posts/2008-10-04-pes-2009-demo-patch.md
@@ -12,10 +12,10 @@ status: finished
 <div class="box alt">
     <div class="row uniform 50%">
         <div class="4u">
-            <img src="{{ site.baseurl }}img/pes2009demo.png" alt="{{ page.title }}" class="image fit" />
+            <img src="{{ site.url_dir }}img/pes2009demo.png" alt="{{ page.title }}" class="image fit" />
         </div>
         <div class="4u">
-            <img src="{{ site.baseurl }}img/pes2009demo_screen.jpg" alt="{{ page.title }} Screen" class="image fit" />
+            <img src="{{ site.url_dir }}img/pes2009demo_screen.jpg" alt="{{ page.title }} Screen" class="image fit" />
         </div>
     </div>
 </div>
