--- a/_posts/2010-04-29-mkid.md
+++ b/_posts/2010-04-29-mkid.md
@@ -34,13 +34,13 @@ Unfortunatly I didn't get the chance to finish the models.
 <div class="box alt">
     <div class="row uniform 50%">
         <div class="4u">
-            <img src="{{ site.baseurl }}img/subzero5_thumb.png" alt="{{ post.title }}" class="image fit" />
+            <img src="{{ site.url_dir }}img/subzero5_thumb.png" alt="{{ post.title }}" class="image fit" />
         </div>
         <div class="4u">
-            <img src="{{ site.baseurl }}img/woman_thumb.png" alt="{{ post.title }}" class="image fit" />
+            <img src="{{ site.url_dir }}img/woman_thumb.png" alt="{{ post.title }}" class="image fit" />
         </div>
         <div class="4u">
-            <img src="{{ site.baseurl }}img/menubackmkid_thumb.jpg" alt="{{ post.title }}" class="image fit" />
+            <img src="{{ site.url_dir }}img/menubackmkid_thumb.jpg" alt="{{ post.title }}" class="image fit" />
         </div>
     </div>
 </div>
@@ -56,13 +56,13 @@ While "the remainning few" were playing with it I started putting together the f
 <div class="box alt">
     <div class="row uniform 50%">
         <div class="4u">
-            <img src="{{ site.baseurl }}img/LostLandsUC1.jpg" alt="{{ post.title }}" class="image fit" />
+            <img src="{{ site.url_dir }}img/LostLandsUC1.jpg" alt="{{ post.title }}" class="image fit" />
         </div>
         <div class="4u">
-            <img src="{{ site.baseurl }}img/LostLandsUC2.jpg" alt="{{ post.title }}" class="image fit" />
+            <img src="{{ site.url_dir }}img/LostLandsUC2.jpg" alt="{{ post.title }}" class="image fit" />
         </div>
         <div class="4u">
-            <img src="{{ site.baseurl }}img/LostLandsUC3.jpg" alt="{{ post.title }}" class="image fit" />
+            <img src="{{ site.url_dir }}img/LostLandsUC3.jpg" alt="{{ post.title }}" class="image fit" />
         </div>
     </div>
 </div>
