--- a/_posts/2010-08-24-energon.md
+++ b/_posts/2010-08-24-energon.md
@@ -8,5 +8,5 @@ thumb: energon_thumb.jpg
 category: Project
 status: abandoned
 ---
-![Logo]({{ site.baseurl }}img/energon_logo.png)
-![Screenshot]({{ site.baseurl }}img/energon.jpg)
+![Logo]({{ site.url_dir }}img/energon_logo.png)
+![Screenshot]({{ site.url_dir }}img/energon.jpg)
