--- a/_posts/2011-07-05-cs16-launcher.md
+++ b/_posts/2011-07-05-cs16-launcher.md
@@ -8,4 +8,4 @@ thumb: cslauncher_thumb.jpg
 category: Project
 status: finished
 ---
-![Counter-Strike 1.6 Launcher]({{ site.baseurl }}img/cs16launcher.png)
+![Counter-Strike 1.6 Launcher]({{ site.url_dir }}img/cs16launcher.png)
