--- a/_posts/2016-06-06-cppual.md
+++ b/_posts/2016-06-06-cppual.md
@@ -9,7 +9,7 @@ category: Project
 role: Idea, Code
 status: wip
 ---
-![Logo]({{ site.baseurl }}img/cppual.png "C++ Unified Abstraction Library")
+![Logo]({{ site.url_dir }}img/cppual.png "C++ Unified Abstraction Library")
 
 >Latest Supported Language Standard: C++14
 
