--- a/_posts/2016-12-24-mk4-sdk.md
+++ b/_posts/2016-12-24-mk4-sdk.md
@@ -9,7 +9,7 @@ category: Project
 role: Code, Art
 status: wip
 ---
-![Logo]({{ site.baseurl }}img/mortal-kombat-4-logo.jpg "Mortal Kombat 4 SDK")
+![Logo]({{ site.url_dir }}img/mortal-kombat-4-logo.jpg "Mortal Kombat 4 SDK")
 
 # Overview
 ----
