PSU post image fixed;

--- a/_posts/2023-01-26-psu.md
+++ b/_posts/2023-01-26-psu.md
@@ -4,7 +4,7 @@ title: Power Supply Unit Characteristics
 description: PSU
 tagline: Solventer
 tags: Science Electronics KiCAD
-thumb: va-psu_thumb.jpg
+thumb: psu_thumb.jpg
 category: Project
 client: Solventer Ltd.
 client_url: https://solventer.eu/
