PSU post updated;

--- a/_posts/2023-01-26-psu.md
+++ b/_posts/2023-01-26-psu.md
@@ -1,6 +1,6 @@
 ---
 layout: post_content
-title: Power Supply Unit Characteristics
+title: Power Supply Unit
 description: PSU
 tagline: Solventer
 tags: Science Electronics KiCAD
