solventer igbt thumbnail link fixed;

--- a/_posts/2023-01-27-igbt.md
+++ b/_posts/2023-01-27-igbt.md
@@ -4,7 +4,7 @@ title: Solventer IGBT
 description: IGBT
 tagline: Solventer
 tags: Science Electronics KiCAD
-thumb: heat-pump_thumb.jpg
+thumb: igbt_thumb.jpg
 category: Project
 client: Solventer Ltd.
 client_url: https://solventer.eu/
