cppual page updated with link to the github source code;

--- a/_posts/2016-06-06-cppual.md
+++ b/_posts/2016-06-06-cppual.md
@@ -13,7 +13,7 @@ status: wip
 
 >Latest Supported Language Standard: C++14
 
-***The source code is private for now***
+***[The Source Code - Github](https://github.com/insidious-src/CPPUAL)***
 
 ## Framework Goals
 
@@ -36,19 +36,19 @@ status: wip
 ## Technical Specifications
 
 ### Host
-* plugins **(Done)**
-* utilities **(Done)**
-* cross-platform process management and interprocess communication **(~60%)**
-* query hardware and os information **(Done)**
+* plugins
+* utilities
+* cross-platform process management and interprocess communication
+* query hardware and os information
 
 ### Compute
-* use concurrency as fallback host implementation **(Done)**
-* specialized device & shared memory allocators **(~80%)**
-* unified memory management & allocator patterns **(~90%)**
-* host/device out-of-order and continuation tasks **(~50%)**
-* use Vulkan & OpenCL as SINGLE SOURCE backends (SPIR-V is required to implement eventual C++ interpreter) **(~40%)**
-* behaviour-based device scheduling and manipulation **(WIP)**
-* branched device tasks **(WIP)**
+* use concurrency as fallback host implementation
+* specialized device & shared memory allocators
+* unified memory management & allocator patterns
+* host/device out-of-order and continuation tasks
+* use Vulkan & OpenCL as SINGLE SOURCE backends (SPIR-V is required to implement eventual C++ interpreter)
+* behaviour-based device scheduling and manipulation
+* branched device tasks
 
 ### Active Model View Controller (UniFace)
 * node based + smart pointer
@@ -65,9 +65,9 @@ status: wip
 * can generate user interfaces on the fly using layout data
 
 ### Network
-* implementation of the C++17 network library **(~80%)**
-* simplified packet exchange **(Done)**
-* layered protocol interface **(~30%)**
+* implementation of the C++17 network library
+* simplified packet exchange
+* layered protocol interface
 * http, https, ftp, bittorrent protocols
 
 ### Universal Database Interface
@@ -76,7 +76,7 @@ status: wip
 * DOM model extension
 
 ### Input
-* specialized raw input queues **(WIP)**
+* specialized raw input queues
 * integrated security
 * all types of keyboards
 * all types of mice
@@ -89,21 +89,21 @@ status: wip
 * touch surfaces
 
 ### Graphics
-* unified surface management **(WIP)**
-* gfx algorithms based on compute library **(WIP)**
+* unified surface management
+* gfx algorithms based on compute library
 * abstract draw objects
 * scene graph
 * 2D images and icons
 * 3D images
-* cross-platform font texture generator **(WIP)**
+* cross-platform font texture generator
 * color management and post-processing
 
 ### User Interface
-* display management (Done)
-* window adaptor for platform window management **(~90%)**
-* completely independant widgets implemented as functional structures (can be used everywhere from 3D environments to desktop) **(~80%)**
-* abstract interchangeable controls (draw objects can be changed on the fly) **(WIP)**
-* skin engine (native, html/css, xml & custom) **(WIP)**
+* display management
+* window adaptor for platform window management
+* completely independant widgets implemented as functional structures (can be used everywhere from 3D environments to desktop)
+* abstract interchangeable controls (draw objects can be changed on the fly)
+* skin engine (native, html/css, xml & custom)
 
 ### Multimedia
 * codecs backend manager
@@ -111,13 +111,13 @@ status: wip
 
 ### Audio
 * audio backend using compute library
-* audio file loader (format decoder, quality convertion and manipulation) **(~30%)**
-* listener functions **(Done)**
-* recorder **(Done)**
-* sound source **(Done)**
-* dynamic circular buffer **(Done)**
-* emitter **(Done)**
-* advanced player **(WIP)**
+* audio file loader (format decoder, quality convertion and manipulation)
+* listener functions
+* recorder
+* sound source
+* dynamic circular buffer
+* emitter
+* advanced player
 * equalizer and filters
 
 ### Video
@@ -127,23 +127,23 @@ status: wip
 * desktop recording
 
 ### Utilities
-* timer **(Done)**
+* timer
 * calendar
-* passive timeline with speed adjustment **(Done)**
-* fast COW string **(Done)**
-* circular queue + atomic **(WIP)**
-* signals **(Done)**
-* reactive functional types **(WIP)**
+* passive timeline with speed adjustment
+* fast COW string
+* circular queue + atomic
+* signals
+* reactive functional types
 * simd types
-* resource management **(WIP)**
+* resource management
 
 
 ## Longterm Framework Goals ##
-* completely integrate into the std library **(~40%)**
-* unified dynamic memory management for both host and compute devices **(~80%)**
-* drop opengl, directx, glew, egl **(WIP)**
-* drop freetype **(WIP)**
-* drop openal **(WIP)**
+* completely integrate into the std library
+* unified dynamic memory management for both host and compute devices
+* drop opengl, directx, glew, egl
+* drop freetype
+* drop openal
 * drop sndfile
 * transparent filesystem management (using protocols)
 * prepare the library for universal memory (memristors)
