updated cppual post;

--- a/_posts/2016-06-06-cppual.md
+++ b/_posts/2016-06-06-cppual.md
@@ -11,7 +11,7 @@ status: wip
 ---
 ![Logo]({{ site.url_dir }}img/cppual.webp "C++ Unified Abstraction Library")
 
->Latest Supported Language Standard: C++14
+>Latest Supported Language Standard: C++20
 
 ***[The Source Code - Github](https://github.com/insidious-src/CPPUAL)***
 
@@ -89,7 +89,7 @@ status: wip
 * touch surfaces
 
 ### Graphics
-* unified surface management
+* unified surface management (ex. using Vulkan Extensions)
 * gfx algorithms based on compute library
 * abstract draw objects
 * scene graph
@@ -146,4 +146,3 @@ status: wip
 * drop openal
 * drop sndfile
 * transparent filesystem management (using protocols)
-* prepare the library for universal memory (memristors)
