bg cv updated; about page updated; cppual project post updated; css updated;

--- a/_posts/2016-06-06-cppual.md
+++ b/_posts/2016-06-06-cppual.md
@@ -11,7 +11,7 @@ status: wip
 ---
 ![Logo]({{ site.url_dir }}img/cppual.webp "C++ Unified Abstraction Library")
 
->Latest Supported Language Standard: C++20
+>Latest Supported Language Standard: C++23
 
 ***[The Source Code - Github](https://github.com/insidious-src/CPPUAL)***
 
@@ -35,13 +35,11 @@ status: wip
 
 ## Technical Specifications
 
-### Host
+### Endoskeleton
 * plugins
 * utilities
 * cross-platform process management and interprocess communication
 * query hardware and os information
-
-### Compute
 * use concurrency as fallback host implementation
 * specialized device & shared memory allocators
 * unified memory management & allocator patterns
